--- a/src/layouts/Content/Content.scss
+++ b/src/layouts/Content/Content.scss
@@ -4,6 +4,8 @@
   scrollbar-width: thin;
   height: 100%;
   display: flex;
+  // TODO: Разобраться с z-index
+  z-index: -1;
 
   &__hero {
     flex: 1 1 auto;
