--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -6,4 +6,8 @@
   align-items: center;
   border-bottom: var(--border);
   padding-block: 20px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: var(--color-black);
 }
