--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -2,12 +2,28 @@
   width: 100%;
   padding-inline: var(--padding-size);
 
+
   &:not(.container--header) {
     padding-block: var(--padding-size);
   }
 }
 
 .wrapper {
+  max-width: var(--container-width);
+  margin-inline: auto;
+  width: 100%;
+
+  display: grid;
+  grid-template-columns: minmax(44px, 220px) 1fr;
+  grid-template-rows: var(--height-header) 1fr;
+  grid-template-areas:
+      'header header'
+      'aside main';
+  border-inline: var(--border);
+  position: relative;
+}
+
+.border-wrapper {
   border: var(--border);
   border-radius: var(--border-radius);
   padding: var(--padding-size);
