--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -23,4 +23,5 @@
 
   --padding-size: 24px;
   --height-header: 72px;
+  --container-width: 1350px;
 }
